--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -2,39 +2,12 @@ spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
 server.port=3001
-
-# Logging
-logging.level.root=INFO
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-# logging.level.org.springframework.security=DEBUG
-# logging.level.org.flowable=DEBUG
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.org.springframework.security=WARN
-logging.level.org.flowable=WARN
-
-# Spring Security OAuth2 Resource Server
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
+keycloak.port=10001
 
 # Spring Data REST
 spring.data.rest.base-path: /api
 
-# Spring JPA
-spring.datasource.driver-class-name=org.h2.Driver
-# Used by mvn spring-boot:run
-spring.datasource.url=jdbc:h2:~/h2/serendipity;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=admin
-spring.datasource.password=secret
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=true
-
 spring.mvc.static-path-pattern=/**
 
-# https://docs.spring.io/spring-boot/docs/1.3.0.M1/reference/html/boot-features-external-config.html#boot-features-external-config-relaxed-binding
+# Spring Security OAuth2 Resource Server
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:${keycloak.port}/auth/realms/development/protocol/openid-connect/certs
