--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -5,9 +5,16 @@ server.port=3001
 keycloak.port=10001
 
 # Spring Data REST
-spring.data.rest.base-path: /api
+spring.data.rest.base-path=/api
 
 spring.mvc.static-path-pattern=/**
 
 # Spring Security OAuth2 Resource Server
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:${keycloak.port}/auth/realms/development/protocol/openid-connect/certs
+
+# Logging
+logging.level.root=INFO
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.org.flowable=WARN
