Updated the Maven profiles

--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -132,26 +132,59 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- The "default" profile requires the H2 database -->
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
 
+  <!--
   <profiles>
+
     <profile>
       <id>dev-h2</id>
       <activation>
-        <activeByDefault>false</activeByDefault>
+        <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <spring.profile.from.maven>dev-h2</spring.profile.from.maven>
+        <spring.profiles.active>dev-h2</spring.profiles.active>
       </properties>
       <dependencies>
+
         <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
           <scope>runtime</scope>
         </dependency>
+
       </dependencies>
     </profile>
+
+    <profile>
+      <id>dev-pg</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <spring.profiles.active>dev-pg</spring.profiles.active>
+      </properties>
+      <dependencies>
+
+        <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <scope>runtime</scope>
+        </dependency>
+
+      </dependencies>
+    </profile>
+
   </profiles>
+  -->
 
   <build>
     <plugins>
@@ -173,16 +206,18 @@
 
 </project>
 
-<!--
-<dependency>
-  <groupId>org.xerial</groupId>
-  <artifactId>sqlite-jdbc</artifactId>
-</dependency>
--->
+        <!--
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <scope>test</scope>
+        </dependency>
+        -->
 
-<!--
-<dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-devtools</artifactId>
-</dependency>
--->
+        <!--
+        <configuration>
+          <profiles>
+            <profile>dev-pg</profile>
+          </profiles>
+        </configuration>
+        -->
