--- a/projects/spring-boot/server/sample.env
+++ b/projects/spring-boot/server/sample.env
@@ -1,17 +1,17 @@
-SPRING_MAIN_BANNER_MODE=off
-SPRING_JPA_OPEN_IN_VIEW=false
-
 SERVER_PORT=3001
 
-LOGGING_LEVEL_ROOT=INFO
-
-LOGGING_LEVEL_ORG_HIBERNATE_SQL=WARN
-LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL_BASIC_BINDER=WARN
-LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=WARN
-
-SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://keycloak:8080/auth/realms/development/protocol/openid-connect/certs
+SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
 
 SPRING_DATA_REST_BASE_PATH=/api
+SPRING_MVC_STATIC_PATH_PATTERN=/**
+
+LOGGING_LEVEL_ROOT=INFO
+LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=WARN
+LOGGING_LEVEL_ORG_HIBERNATE_SQL=WARN
+LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL_BASIC_BINDER=WARN
+LOGGING_LEVEL_ORG_FLOWABLE=WARN
+
+
 
 SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.h2.Driver
 SPRING_DATASOURCE_USERNAME=admin
@@ -24,5 +24,3 @@ SPRING_DATASOURCE_URL=jdbc:h2:/h2/serendipity
 AUTO_SERVER=TRUE
 AUTO_SERVER_PORT=9091
 DB_CLOSE_DELAY=-1
-
-SPRING_MVC_STATIC_PATH_PATTERN=/**
