--- a/projects/spring-boot/server/src/main/resources/application.properties
+++ b/projects/spring-boot/server/src/main/resources/application.properties
@@ -1,20 +1,39 @@
+# spring.profiles.active=@spring.profiles.active@
+
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
 
 server.port=3001
-keycloak.port=10001
 
-# Spring Data REST
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:10001/auth/realms/development/protocol/openid-connect/certs
+
 spring.data.rest.base-path=/api
+# spring.mvc.static-path-pattern=/**
 
-spring.mvc.static-path-pattern=/**
-
-# Spring Security OAuth2 Resource Server
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:${keycloak.port}/auth/realms/development/protocol/openid-connect/certs
-
-# Logging
 logging.level.root=INFO
 logging.level.org.springframework.security=WARN
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 logging.level.org.flowable=WARN
+
+# Spring Datasource
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/h2/serendipity;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=admin
+spring.datasource.password=secret
+
+# Spring JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=true
+
+# See: docker-compose.yml
+# volumes:
+#   - ./h2:/h2
+
+# https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
