--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     env_file: ./services/openldap/openldap.env
     ports:
       - "389:389"
+      - "636:636"
 
   keycloak:
     container_name: keycloak
@@ -18,13 +19,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "10001:8080"
+      - "10443:8443"
     volumes:
       - .:/export
     env_file: ./services/keycloak/keycloak.env
     depends_on:
       - openldap
 
-  db:
+  postgres:
     container_name: postgres
     build:
       context: ./services/postgres
@@ -35,6 +37,17 @@ services:
       - .:/var/lib/postgresql/data
     env_file: ./services/postgres/postgres.env
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@serendipity.org.au}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-secret}
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    volumes:
+      - .:/root/.pgadmin
+
   serendipity-api:
     container_name: serendipity-api
     build:
@@ -44,12 +57,36 @@ services:
       - "3001:3001"
     environment:
       - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://keycloak:8080/auth/realms/development/protocol/openid-connect/certs
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/serendipity
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/serendipity
     # volumes:
     #   - ./h2:/h2
     # env_file: ./serendipity-api-test.env
     depends_on:
-      - db
+      - postgres
       - keycloak
 
-# Note: environment or env_file you can't use both
+  jasper-reports:
+    container_name: jasper-reports
+    build:
+      context: ./services/jasper-reports
+      dockerfile: Dockerfile
+    ports:
+      - "11001:8080"
+      - "11443:8443"
+    # volumes:
+    env_file: ./services/jasper-reports/jasper-reports.env
+    depends_on:
+      - serendipity-api
+
+# https://docs.docker.com/compose/compose-file/#variable-substitution
+# ${VARIABLE:-default} evaluates to default if VARIABLE is unset or empty in the environment.
+# ${VARIABLE:?err} exits with an error message containing err if VARIABLE is unset or empty in the environment.
+
+# When you set the same environment variable in multiple files, here’s the priority used by Compose to choose which
+# value to use:
+#
+# Compose file
+# Shell environment variables
+# Environment file
+# Dockerfile
+# Variable is not defined
