--- a/projects/spring-boot/server/services/jasper-reports/jasper-reports.env
+++ b/projects/spring-boot/server/services/jasper-reports/jasper-reports.env
@@ -1,8 +1,6 @@
-JASPERREPORTS_USERNAME=admin
-JASPERREPORTS_PASSWORD=secret
-
-MARIADB_HOST=postgres
-MARIADB_PORT_NUMBER=5432
-JASPERREPORTS_DATABASE_NAME=serendipity
-JASPERREPORTS_DATABASE_USER=admin
-JASPERREPORTS_DATABASE_PASSWORD=secret
+DB_USER=admin
+DB_PASSWORD=secret
+DB_PORT=5432
+DB_NAME=serendipity
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=secret
