--- a/projects/spring-boot/server/src/main/resources/application-dev.properties
+++ b/projects/spring-boot/server/src/main/resources/application-dev.properties
@@ -11,8 +11,7 @@ spring.datasource.password=secret
 # Spring JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-# spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # See: docker-compose.yml
 # environment:
