Added support for JasperReports Server

--- a/projects/spring-boot/server/src/main/resources/application-dev.properties
+++ b/projects/spring-boot/server/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.datasource.password=secret
 # Spring JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
 
 # See: docker-compose.yml
 # environment:
