--- a/projects/spring-boot/pom.xml
+++ b/projects/spring-boot/pom.xml
@@ -104,6 +104,12 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.vladmihalcea</groupId>
+      <artifactId>hibernate-types-52</artifactId>
+      <version>2.9.11</version>
+    </dependency>
+
     <!-- Add Flowable dependencies -->
 
     <dependency>
