--- a/projects/spring-boot/server/src/main/resources/application-test.properties
+++ b/projects/spring-boot/server/src/main/resources/application-test.properties
@@ -7,7 +7,7 @@ spring.datasource.password=secret
 # Spring JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
 
 # H2 Console
 spring.h2.console.enabled=true
