Added support for JasperReports Server

--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -63,7 +63,6 @@ services:
     # env_file: ./serendipity-api-test.env
     depends_on:
       - postgres
-    command: ["./wait-for-it.sh", "postgres:5432", "--", "python", "app.py"]
 
   jasperreports-server:
     container_name: jasperreports-server
@@ -81,7 +80,7 @@ services:
       - DB_HOST=postgres
     depends_on:
       - postgres
-    command: ["./wait-for-it.sh", "postgres:5432", "--", "python", "app.py"]
+    command: ["./wait-for-it.sh --timeout=30", "postgres:5432", "--", "./entrypoint.sh"]
 
   jasperreports-server-cmdline:
     container_name: jasperreports-server-cmdline
@@ -97,7 +96,7 @@ services:
       - JRS_LOAD_SAMPLES=true
     depends_on:
       - postgres
-    command: ["./wait-for-it.sh", "postgres:5432", "--", "python", "app.py"]
+    command: ["./wait-for-it.sh --timeout=30", "postgres:5432", "--", "./entrypoint-cmdline.sh"]
 
 # How to determine when new container is truly "ready"
 # https://github.com/docker-library/postgres/issues/146
