--- a/projects/spring-boot/server/services/jasperreports-server/jasper-reports.env
+++ b/projects/spring-boot/server/services/jasperreports-server/jasper-reports.env
@@ -11,3 +11,13 @@ DB_PORT=5432
 DB_NAME=jasperserver
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=secret
+
+#
+# To manage a single organization
+# User ID: jasperadmin
+# Password: jasperadmin
+#
+# To see an end user's view
+# User ID: joeuser
+# Password: joeuser
+#
