--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -40,9 +40,7 @@ services:
       - DB_HOST=postgres
     depends_on:
       - jasperreports-server-cmdline
-    command: /bin/bash -c "
-      sleep 60 &&
-      run"
+    command: ["run"]
 
   jasperreports-server-cmdline:
     container_name: jasperreports-server-cmdline
