--- a/projects/spring-boot/server/docker-compose-3.7.yml
+++ b/projects/spring-boot/server/docker-compose-3.7.yml
@@ -28,7 +28,9 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres:latest
+    build:
+      context: ./services/postgres
+      dockerfile: Dockerfile
     ports:
       - "5432:5432"
     volumes:
