--- a/projects/spring-boot/server/docker-compose.yml
+++ b/projects/spring-boot/server/docker-compose.yml
@@ -4,7 +4,9 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres:latest
+    build:
+      context: ./services/postgres
+      dockerfile: Dockerfile
     ports:
       - "5432:5432"
     volumes:
