Added support for JasperReports Server

--- a/projects/spring-boot/server/Dockerfile
+++ b/projects/spring-boot/server/Dockerfile
@@ -1,12 +1,12 @@
-FROM openjdk:12-jdk-oraclelinux7
+FROM openjdk:11.0.7-slim
 
 COPY ./services/jasperreports-server/scripts/wait-for-container-to-exit.sh /
 
 # Commands that we need to run as root
 RUN echo "apt-get" && \
     chmod +x /*.sh && \
-    yum -y update && \
-    yum -y install yum-utils curl jq && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends curl jq && \
     addgroup --system spring && adduser --system spring --ingroup spring && \
     mkdir /opt/serendipity-api && chown spring:spring /opt/serendipity-api
 
@@ -19,8 +19,7 @@ CMD ["java", "-jar", "/opt/serendipity-api/serendipity-rest-api-core-0.0.1-SNAPS
 
 EXPOSE 3001
 
-# apt-get install -y --no-install-recommends curl jq && \
-# apk add --no-cache curl jq && \
+
 
 # FROM adoptopenjdk/openjdk11:jre-11.0.6_10
 # FROM adoptopenjdk/openjdk11:ubi
@@ -28,3 +27,11 @@ EXPOSE 3001
 
 # https://stackoverflow.com/questions/53669151/java-11-application-as-lightweight-docker-image
 # https://forums.docker.com/t/openjdk-bin-sh-apt-command-not-found/72606
+
+# yum -y update && \
+# yum -y install yum-utils curl jq && \
+
+# apt-get update && \
+# apt-get install -y --no-install-recommends curl jq && \
+
+# apk add --no-cache curl jq && \
