--- a/projects/spring-boot/server/Dockerfile
+++ b/projects/spring-boot/server/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:11.0.7-slim
 
-COPY ./services/jasperreports-server/scripts/wait-for-container-to-exit.sh /
+COPY /services/jasperreports-server/scripts/wait-for-container-to-exit.sh /
+COPY entrypoint.sh /
 
 # Commands that we need to run as root
 RUN echo "apt-get" && \
@@ -12,12 +13,15 @@ RUN echo "apt-get" && \
 
 USER spring:spring
 
-# Install the App's dependencies
 COPY ./target/serendipity-rest-api-core-0.0.1-SNAPSHOT.jar /opt/serendipity-api
+
+EXPOSE 3001
+
+ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["java", "-jar", "/opt/serendipity-api/serendipity-rest-api-core-0.0.1-SNAPSHOT.jar"]
 
-EXPOSE 3001
+
 
 
 
